--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3.7'
 
 services:
   app:
@@ -15,14 +15,18 @@ services:
     environment:
       - DB_HOST=db
       - DB_NAME=app
-      - DB_USER=postgres
+      - DB_USER=root
       - DB_PASS=pass123
+      - DB_PORT=3306
     depends_on:
       - db
 
   db:
-    image: postgres:10-alpine
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
     environment:
-      - POSTGRES_DB=app
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=pass123
+      - MYSQL_DATABASE=app
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=pass123
+      - MYSQL_ROOT_PASSWORD=pass123
