--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django>=3.1,<3.2
 djangorestframework>=3.11.1,<3.12.0
 flake8>=3.8.3,<3.9.0
-psycopg2>=2.7.5,<2.8.0
+mysqlclient>=2.0.1,<2.1
+django-mysql>=3.8.1,<3.9
 Pillow>=7.1.0,<7.2.0
+zappa>=0.51.0,<0.52.0
