Added support for AWS Lambda Formatted code Removed secreets from zappa settings

--- a/Dockerfile-zappa
+++ b/Dockerfile-zappa
@@ -2,8 +2,20 @@ FROM lambci/lambda:build-python3.8
 
 RUN pip install -U pip-tools && \
   pip install -U zappa
-RUN yum -y install mysql-devel
 
 RUN virtualenv /venv
 
-WORKDIR /var/task
+RUN mkdir /var/task/app
+COPY ./app /var/task/app
+
+COPY ./aws.env /
+
+RUN export $(cat aws.env | xargs)
+
+RUN source /venv/bin/activate && \
+    pip install -r /var/task/app/requirements.txt && \
+    deactivate
+
+WORKDIR /var/task/app
+
+RUN envsubst < zappa_settings.json.tpl > zappa_settings.json
