--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,8 @@
 Django>=3.1,<3.2
 djangorestframework>=3.11.1,<3.12.0
 flake8>=3.8.3,<3.9.0
-mysqlclient>=2.0.1,<2.1
+PyMySQL>=0.10.0,<0.11.0
 django-mysql>=3.8.1,<3.9
 Pillow>=7.1.0,<7.2.0
 zappa>=0.51.0,<0.52.0
+django-s3-storage==0.13.3
